# KlayGE

./: .appveyor.yml  .clang-format  .gitignore  .hgignore  .travis.yml  BLibUtil.py  Build.py  BuildAll.py  BuildDXBC2GLSL.py  BuildExternal.py  BuildGlloader.py  BuildKFL.py  BuildKFont.py  BuildKlayGE.py  BuildMeshMLLib.py  CMakeLists.txt  CfgBuildDefault.py  DeployKlayGE.py  LICENSE-External.md  Package.py  README.md  azure-pipelines.yml  blib_util.py  build_DXBC2GLSL.py  build_KFL.py  build_KlayGE.py  build_MeshMLLib.py  build_all.py  build_external.py  build_glloader.py  build_kfont.py  cfg_build_default.py  deploy_KlayGE.py  readme.chs.html  readme.en.html
DXBC2GLSL/: CMakeLists.txt
DXBC2GLSL/Include/DXBC2GLSL/: DXBC.hpp  DXBC2GLSL.hpp  GLSLGen.hpp  Shader.hpp  ShaderDefs.hpp  Utils.hpp
DXBC2GLSL/Src/: CMakeLists.txt  DXBC2GLSL.cpp  DXBCParse.cpp  GLSLGen.cpp  ShaderDefs.cpp  ShaderParse.cpp  Utils.cpp
DXBC2GLSL/Tools/: CMakeLists.txt
DXBC2GLSL/Tools/DXBC2GLSLCmd/: CMakeLists.txt  DXBC2GLSLCmd.cpp
DXBC2GLSL/Tools/DXBCDisasm/: ASMGen.cpp  ASMGen.hpp  CMakeLists.txt  DXBCDisasm.cpp
KFL/: CMakeLists.txt
KFL/include/KFL/: AABBox.hpp  AlignedAllocator.hpp  Architecture.hpp  ArrayRef.hpp  Bound.hpp  COMPtr.hpp  CXX11.hpp  CXX17.hpp  Color.hpp  Compiler.hpp  Config.hpp  Config.hpp.in  CpuInfo.hpp  CustomizedStreamBuf.hpp  DllLoader.hpp  ErrorHandling.hpp  Extract7z.hpp  Frustum.hpp  Half.hpp  Hash.hpp  JsonDom.hpp  KFL.hpp  LZMACodec.hpp  Log.hpp  Math.hpp  Matrix.hpp  Noise.hpp  Noncopyable.hpp  OBBox.hpp  Operators.hpp  Plane.hpp  Platform.hpp  PreDeclare.hpp  Quaternion.hpp  Rect.hpp  ResIdentifier.hpp  ResLoader.hpp  SIMDMath.hpp  SIMDMatrix.hpp  SIMDVector.hpp  (+15 more)
KFL/src/Base/: CpuInfo.cpp  CustomizedStreamBuf.cpp  ErrorHandling.cpp  JsonDom.cpp  Log.cpp  Thread.cpp  Util.cpp  XMLDom.cpp
KFL/src/Kernel/: CpuInfo.cpp  CustomizedStreamBuf.cpp  DllLoader.cpp  ErrorHandling.cpp  KFL.cpp  Log.cpp  ResLoader.cpp  Thread.cpp  ThrowErr.cpp  Timer.cpp  Util.cpp  XMLDom.cpp
KFL/src/Math/: AABBox.cpp  Color.cpp  Frustum.cpp  Half.cpp  Math.cpp  Matrix.cpp  Noise.cpp  OBBox.cpp  Plane.cpp  Quaternion.cpp  Rect.cpp  SIMDMath.cpp  SIMDMatrix.cpp  SIMDVector.cpp  Size.cpp  Sphere.cpp
KFL/src/Pack/: ArchiveExtractCallback.cpp  ArchiveExtractCallback.hpp  ArchiveOpenCallback.cpp  ArchiveOpenCallback.hpp  Extract7z.cpp  LZMACodec.cpp  Streams.cpp  Streams.hpp
KlayGE/: .cvsignore  .gitignore  CMakeLists.txt  KlayGE.plan  KlayGE.sln  Readme.txt  env_vars.py  readme.chs.html  readme.en.html  readme.html
KlayGE/AppLayer/: AppLayer.vcproj
KlayGE/AppLayer/Src/: App3D.cpp  Window.cpp
KlayGE/Core/: CMakeLists.txt  Core.vcproj
KlayGE/Demos/: .cvsignore  Demos.sln  Readme_chs.txt
KlayGE/Demos/Cartoon/: Cartoon.cpp  Cartoon.fx  Cartoon.hpp  Cartoon.vcproj  Cartoon.vsh
KlayGE/Demos/Parallax/: Parallax.cpp  Parallax.hpp  Parallax.vcproj
KlayGE/Demos/PerPixelLighting/: PerPixelLighting.cpp  PerPixelLighting.fx  PerPixelLighting.hpp  PerPixelLighting.vcproj
KlayGE/Demos/VertexDisplacement/: VertexDisplacement.cpp  VertexDisplacement.vcproj
KlayGE/Demos/media/: Box.fx  Font.fx  KMesh.fx  RenderableHelper.fx
KlayGE/Doc/: KlayGE_Packing_System.html  KlayGE_Packing_System_en.html  faq.html  faq_chs.html  faq_en.html  features.html  features_chs.html  features_en.html  index.html  index_chs.html  index_en.html  wishlist.html
KlayGE/Doc/AppLayer/: app.xml
KlayGE/Doc/html/: download_chs.html  download_en.html  faq_chs.html  (+4 more)
KlayGE/Plugins/: CMakeLists.txt
KlayGE/RenderFX/: 2D.fx  2D.fxml  Blur.fx  Blur.fxml  Bone.fx  Bone.fxml  DownSample.fx  DownSample.fxml  Fog.fx  Font.fx  Font.fxml  GammaCorrection.fxml  KMesh.fx  KMesh.fxml  Lighting.fx  Lighting.fxml  Noise.fxml  PerlinNoise.fxml  PointSprite.fx  PointSprite.fxml  PostProcess.fxml  Quaternion.fx  Quaternion.fxml  RenderableHelper.fx  RenderableHelper.fxml  SumLum.fx  SumLum.fxml  SummedAreaTable.fxml  TNL.fx  ToneMapping.fx  ToneMapping.fxml  Transform.fx  Transforming.fx  UI.fxml  util.fx  util.fxml
KlayGE/Samples/: CMakeLists.txt  Readme_chs.txt  readme_chs.html  readme_en.html
KlayGE/Tests/: CMakeLists.txt
KlayGE/Tools/: .cvsignore  CMakeLists.txt  Tools.sln
KlayGE/Tutorials/: CMakeLists.txt
KlayGE/media/: KlayGE.rc
glloader/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  autogen.py  glloader.plan  readme.chs.html  readme.chs.txt  readme.en.html  readme.txt
glloader/doc/: Doxyfile  extension.dtd  glloader.chs.txt  glloader.txt
glloader/src/: .cvsignore  gl12.cpp  gl13.cpp  gl14.cpp  gl15.cpp  gl20.cpp  gl21.cpp  gl30.cpp  utils.cpp  utils.h  utils.hpp
glloader/xml/: EGL_ANDROID_blob_cache.xml  EGL_ANDROID_create_native_client_buffer.xml  EGL_ANDROID_framebuffer_target.xml  EGL_ANDROID_front_buffer_auto_refresh.xml  EGL_ANDROID_image_native_buffer.xml  EGL_ANDROID_native_fence_sync.xml  EGL_ANDROID_presentation_time.xml  EGL_ANDROID_recordable.xml  EGL_ANGLE_d3d_share_handle_client_buffer.xml  EGL_ANGLE_device_d3d.xml  EGL_ANGLE_direct3d_display.xml  EGL_ANGLE_platform_angle.xml  EGL_ANGLE_platform_angle_d3d.xml  EGL_ANGLE_platform_angle_opengl.xml  EGL_ANGLE_query_surface_pointer.xml  EGL_ANGLE_robust_resource_initialization.xml  EGL_ANGLE_software_display.xml  EGL_ANGLE_surface_d3d_texture_2d_share_handle.xml  EGL_ANGLE_window_fixed_size.xml  EGL_ARM_implicit_external_sync.xml  EGL_ARM_pixmap_multisample_discard.xml  EGL_EXT_bind_to_front.xml  EGL_EXT_buffer_age.xml  EGL_EXT_client_extensions.xml  EGL_EXT_compositor.xml  EGL_EXT_create_context_robustness.xml  EGL_EXT_device_base.xml  EGL_EXT_device_drm.xml  EGL_EXT_device_enumeration.xml  EGL_EXT_device_openwf.xml  EGL_EXT_device_query.xml  EGL_EXT_gl_colorspace_bt2020_linear.xml  EGL_EXT_gl_colorspace_bt2020_pq.xml  EGL_EXT_gl_colorspace_display_p3.xml  EGL_EXT_gl_colorspace_display_p3_linear.xml  EGL_EXT_gl_colorspace_scrgb.xml  EGL_EXT_gl_colorspace_scrgb_linear.xml  EGL_EXT_image_dma_buf_import.xml  EGL_EXT_image_dma_buf_import_modifiers.xml  EGL_EXT_image_implicit_sync_control.xml  (+1138 more)
kfont/: CMakeLists.txt
kfont/src/: kfont.cpp
(+2147 files in other folders)
