set(KLAYGE_CMAKE_MODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Build/CMake/Modules")
list(APPEND CMAKE_MODULE_PATH "${KLAYGE_CMAKE_MODULE_DIR}")

project(KlayGE)

cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

set(KLAYGE_MAJOR_VERSION 4)
set(KLAYGE_MINOR_VERSION 18)
set(KLAYGE_PATCH_VERSION 0)
set(KLAYGE_VERSION ${KLAYGE_MAJOR_VERSION}.${KLAYGE_MINOR_VERSION}.${KLAYGE_PATCH_VERSION})

set(KLAYGE_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

include(${KLAYGE_CMAKE_MODULE_DIR}/Common.cmake)
include(${KLAYGE_CMAKE_MODULE_DIR}/Platform.cmake)
include(${KLAYGE_CMAKE_MODULE_DIR}/Compiler.cmake)

set(KLAYGE_BIN_DIR "${KLAYGE_ROOT_DIR}/KlayGE/bin/${KLAYGE_PLATFORM_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${KLAYGE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${KLAYGE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${KLAYGE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${KLAYGE_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${KLAYGE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KLAYGE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${KLAYGE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${KLAYGE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${KLAYGE_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${KLAYGE_BIN_DIR})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(${KLAYGE_ROOT_DIR}/External/Build/CMake ${CMAKE_CURRENT_BINARY_DIR}/External EXCLUDE_FROM_ALL)
if(NOT KLAYGE_PLATFORM_WINDOWS_STORE)
	add_subdirectory(glloader)
endif()
add_subdirectory(KFL)
if(KLAYGE_IS_DEV_PLATFORM)
	add_subdirectory(DXBC2GLSL)
endif()
add_subdirectory(kfont)
add_subdirectory(KlayGE)
