SET(DXBC2GLSL_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

SET(DXBC2GLSL_OUTPUT_DIR "${DXBC2GLSL_PROJECT_DIR}/lib/${KLAYGE_PLATFORM_NAME}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DXBC2GLSL_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DXBC2GLSL_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DXBC2GLSL_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${DXBC2GLSL_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${DXBC2GLSL_OUTPUT_DIR})

ADD_SUBDIRECTORY(Src)
ADD_SUBDIRECTORY(Tools)
