set(KLAYGE_PROJECT_DIR "${KLAYGE_ROOT_DIR}/KlayGE")

SET(KLAYGE_CORELIB_NAME KlayGE_Core)

SET(KLAYGE_OUTPUT_DIR "${KLAYGE_PROJECT_DIR}/lib/${KLAYGE_PLATFORM_NAME}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${KLAYGE_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${KLAYGE_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${KLAYGE_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${KLAYGE_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${KLAYGE_OUTPUT_DIR})

ADD_CUSTOM_TARGET(AllInEngine)
SET_TARGET_PROPERTIES(AllInEngine PROPERTIES FOLDER "KlayGE/Engine")

ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Plugins)
ADD_SUBDIRECTORY(Samples)
ADD_SUBDIRECTORY(Tutorials)

IF(KLAYGE_IS_DEV_PLATFORM)
	ADD_SUBDIRECTORY(Tests)
	ADD_SUBDIRECTORY(Tools)
ENDIF()
