set(KLAYGE_PROJECT_DIR "${KLAYGE_ROOT_DIR}/KlayGE")

ADD_CUSTOM_TARGET(AllInEngine)
SET_TARGET_PROPERTIES(AllInEngine PROPERTIES FOLDER "KlayGE/Engine")

ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Plugins)
ADD_SUBDIRECTORY(Samples)
ADD_SUBDIRECTORY(Tutorials)

IF(KLAYGE_IS_DEV_PLATFORM)
	ADD_SUBDIRECTORY(Tests)
	ADD_SUBDIRECTORY(Tools)
ENDIF()
