SET(HEADER_FILES
	${DXBC2GLSL_PROJECT_DIR}/Tools/DXBCDisasm/ASMGen.hpp
)
SET(SOURCE_FILES
	${DXBC2GLSL_PROJECT_DIR}/Tools/DXBCDisasm/ASMGen.cpp
	${DXBC2GLSL_PROJECT_DIR}/Tools/DXBCDisasm/DXBCDisasm.cpp
)

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})

ADD_EXECUTABLE(DXBCDisasm ${SOURCE_FILES} ${HEADER_FILES})

SET_TARGET_PROPERTIES(DXBCDisasm PROPERTIES
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	CXX_VISIBILITY_PRESET hidden
	VISIBILITY_INLINES_HIDDEN ON
	OUTPUT_NAME DXBCDisasm
	FOLDER "DXBC2GLSL"
)

target_link_libraries(DXBCDisasm
	PRIVATE
		DXBC2GLSLLib
		KFL
)
