if (NOT KLAYGE_PLATFORM_WINDOWS_DESKTOP)
	return()
endif()

SET(EXE_NAME KGEConfig)

SET(KGECONFIG_SOURCE_FILES
	${KLAYGE_PROJECT_DIR}/Core/Src/KGEConfig/KGEConfig.cpp
)

SET(KGECONFIG_HEADER_FILES
	${KLAYGE_PROJECT_DIR}/Core/Src/KGEConfig/resource.h
)

SET(KGECONFIG_RESOURCE_FILES
	${KLAYGE_PROJECT_DIR}/Core/Src/KGEConfig/KGEConfig.rc
	${KLAYGE_PROJECT_DIR}/klayge_logo.ico
)

SOURCE_GROUP("Source Files" FILES ${KGECONFIG_SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${KGECONFIG_HEADER_FILES})
SOURCE_GROUP("Resource Files" FILES ${KGECONFIG_RESOURCE_FILES})

ADD_EXECUTABLE(${EXE_NAME} WIN32
	${KGECONFIG_SOURCE_FILES} ${KGECONFIG_HEADER_FILES} ${KGECONFIG_RESOURCE_FILES}
	${KLAYGE_PROJECT_DIR}/bin/KlayGE.cfg
)

ADD_DEPENDENCIES(${EXE_NAME} AllInEngine)

SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES
	PROJECT_LABEL ${EXE_NAME}
	CXX_VISIBILITY_PRESET hidden
	VISIBILITY_INLINES_HIDDEN ON
	OUTPUT_NAME ${EXE_NAME}${KLAYGE_OUTPUT_SUFFIX}
	FOLDER "KlayGE/Engine/KGEConfig"
)

target_link_libraries(${EXE_NAME}
	PRIVATE
		KlayGE_Core
)

IF(MSVC)
	CREATE_VCPROJ_USERFILE(${EXE_NAME})
ENDIF()
